# zzzFX

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  about.toml
.cargo/: config.toml
crates/ae-plugin/: Cargo.toml  build.rs
crates/ae-plugin/src/: handle.rs  lib.rs  shared.rs
crates/ae-plugin/tests/: compile_test.rs
crates/aviutl2-plugin/: Cargo.toml  build.rs
crates/aviutl2-plugin/src/: aul2.rs  lib.rs  params.rs
crates/effect-settings/: Cargo.toml
crates/effect-settings/src/: i18n_keys.rs  lib.rs
crates/example-effect/: Cargo.toml
crates/example-effect/shaders/: shared.wgsl  solid_blend.wgsl  standard.wgsl
crates/example-effect/src/: blend.rs  effect.rs  lib.rs  solid_blend.rs  zzz_repeater.rs  zzz_sprite_sheet.rs  zzz_stroke.rs
crates/example-effect/src/gpu/: mod.rs  repeater.rs  solid_blend.rs  standard.rs
crates/example-effect/src/i18n/: lang_template.rs  mod.rs  zh_cn.rs
crates/example-effect/src/settings/: mod.rs  settings.rs  solid.rs  standard.rs  zzz_repeater.rs  zzz_sprite_sheet.rs  zzz_stroke.rs
crates/example-effect/src/shaders/: compose.wgsl  mask.wgsl  repeater.wgsl  sprite_sheet.wgsl
crates/example-effect/tests/: effect_tests.rs  settings_tests.rs  solid_blend_tests.rs  stroke_blend_tests.rs  stroke_effect_tests.rs  stroke_settings_tests.rs
crates/macros/: Cargo.toml
crates/openfx-plugin/: Cargo.toml  build.rs  wrapper.h
crates/openfx-plugin/src/: ambient_light.rs  ascii_art.rs  ass_subtitle.rs  bindings.rs  cast_shadow.rs  chroma_key.rs  file_param.rs  halftone.rs  i18n.rs  latex_display.rs  lib.rs  long_shadow.rs  midi_display.rs  multitone.rs  pixel_art.rs  qr_code.rs  repeater.rs  shared.rs  sprite_sheet.rs  stroke.rs  svg_display.rs
crates/openfx-plugin/tests/: compile_test.rs
crates/zzz-repeater-ae/: Cargo.toml  build.rs
crates/zzz-repeater-ae/src/: lib.rs
crates/zzz-repeater-openfx/: Cargo.toml  wrapper.h
crates/zzz-repeater-openfx/src/: bindings.rs  lib.rs
crates/zzz-sprite-sheet-openfx/: Cargo.toml  build.rs  wrapper.h
crates/zzz-sprite-sheet-openfx/src/: lib.rs
crates/zzz-stroke-ae/: Cargo.toml  build.rs
crates/zzz-stroke-ae/src/: lib.rs
crates/zzz-stroke-openfx/: Cargo.toml  build.rs  wrapper.h
crates/zzz-stroke-openfx/src/: lib.rs
crates/zzzfx/: Cargo.toml
crates/zzzfx-ae/: Cargo.toml  build.rs
crates/zzzfx-ae/src/: lib.rs  shared.rs
crates/zzzfx-core/: Cargo.toml
crates/zzzfx-core/src/: ambient_light.rs  ascii_art.rs  ass_subtitle.rs  blend.rs  cast_shadow.rs  chroma_key.rs  lib.rs  long_shadow.rs  midi_display.rs  pixel_art.rs  repeater.rs  sprite_sheet.rs  stroke.rs  svg_display.rs
crates/zzzfx-core/src/ass_subtitle/: cache.rs  composite.rs  font.rs  mod.rs  outline.rs  parser.rs  render.rs  tests.rs  transform.rs  types.rs
crates/zzzfx-core/src/gpu/: ambient_light.rs  ascii_art.rs  ass_glyph.rs  ass_subtitle.rs  cast_shadow.rs  chroma_key.rs  mod.rs  pixel_art.rs  repeater.rs  sprite_sheet.rs
crates/zzzfx-core/src/i18n/: lang_template.rs  mod.rs  zh_cn.rs
crates/zzzfx-core/src/settings/: ambient_light.rs  ascii_art.rs  ass_subtitle.rs  cast_shadow.rs  chroma_key.rs  long_shadow.rs  midi_display.rs  mod.rs  pixel_art.rs  repeater.rs  sprite_sheet.rs  stroke.rs  svg_display.rs
crates/zzzfx-core/src/shaders/: ambient_light.wgsl  ass_subtitle.wgsl  cast_shadow.wgsl  compose.wgsl  jfa.wgsl  midi_display.wgsl  pixel_art.wgsl  repeater.wgsl  shared.wgsl  sprite_sheet.wgsl
crates/zzzfx-core/tests/: stroke_blend_tests.rs  stroke_effect_tests.rs  stroke_settings_tests.rs
crates/zzzfx-ofx/: Cargo.toml  build.rs  wrapper.h
crates/zzzfx-ofx/src/: ambient_light.rs  ascii_art.rs  ass_subtitle.rs  bindings.rs  cast_shadow.rs  chroma_key.rs  file_param.rs  i18n.rs  lib.rs  long_shadow.rs  midi_display.rs  pixel_art.rs  repeater.rs  shared.rs  sprite_sheet.rs  stroke.rs  svg_display.rs
crates/zzzfx/src/: ambient_light.rs  ascii_art.rs  blend.rs  cast_shadow.rs  chroma_key.rs  halftone.rs  latex_display.rs  lib.rs  long_shadow.rs  midi_display.rs  multitone.rs  pixel_art.rs  qr_code.rs  repeater.rs  sprite_sheet.rs  stroke.rs  svg_display.rs
crates/zzzfx/src/ass_subtitle/: cache.rs  composite.rs  font.rs  mod.rs  parser.rs  render.rs  tests.rs  types.rs
crates/zzzfx/src/gpu/: ambient_light.rs  ascii_art.rs  ass_glyph.rs  ass_subtitle.rs  cast_shadow.rs  chroma_key.rs  device.rs  halftone.rs  midi_display.rs  mod.rs  multitone.rs  pixel_art.rs  repeater.rs  sprite_sheet.rs
crates/zzzfx/src/i18n/: i18n_keys.rs  ja.rs  keys.rs  ko.rs  lang_template.rs  mod.rs  zh_cn.rs
crates/zzzfx/src/settings/: ambient_light.rs  ascii_art.rs  ass_subtitle.rs  cast_shadow.rs  chroma_key.rs  framework.rs  halftone.rs  latex_display.rs  long_shadow.rs  midi_display.rs  mod.rs  multitone.rs  pixel_art.rs  qr_code.rs  repeater.rs  sprite_sheet.rs  stroke.rs  svg_display.rs
crates/zzzfx/src/shaders/: ambient_light.wgsl  ascii_art.wgsl  ass_glyph.wgsl  ass_subtitle.wgsl  chroma_key.wgsl  compose.wgsl  halftone.wgsl  multitone.wgsl  shared.wgsl  sprite_sheet.wgsl
crates/zzzfx/tests/: i18n_tests.rs  stroke_blend_tests.rs  stroke_effect_tests.rs  stroke_settings_tests.rs
xtask/: Cargo.toml
xtask/src/: build_aviutl2_plugin.rs  build_ofx_plugin.rs  build_zzzfx_ofx_plugin.rs  build_zzzrepeater_ofx_plugin.rs  build_zzzsprite_sheet_ofx_plugin.rs  build_zzzstroke_ofx_plugin.rs  lib.rs  macos_ae_plugin.rs  macos_zzzfx_ae_plugin.rs  macos_zzzrepeater_ae_plugin.rs  macos_zzzstroke_ae_plugin.rs
