[package]
name = "example-effect"
version = "0.1.0"
edition = "2024"
license = "MIT OR ISC OR Apache-2.0"

[dependencies]
num_enum = { version = "0.7.5", default-features = false }
example-effect-macros = { path = "../macros" }
hifijson = "0.5"
sval = { version = "2.14.1", features = ["std"] }
sval_json = { version = "2.14.1", features = ["std"] }

[dev-dependencies]
image = { version = "0.25.1", default-features = false, features = ["png"] }

[lints]
workspace = true
