[package]
name = "example-effect"
version = "0.1.0"
edition = "2024"
license = "MIT OR ISC OR Apache-2.0"

[features]
default = ["gpu"]
gpu = ["zzzfx-core/gpu"]

[dependencies]
effect-settings = { path = "../effect-settings" }
num_enum = { version = "0.7.5", default-features = false }
example-effect-macros = { path = "../macros" }
hifijson = "0.5"
sval = { version = "2.14.1", features = ["std"] }
sval_json = { version = "2.14.1", features = ["std"] }
rayon = "1.10"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
wgpu = { version = "29", features = ["wgsl"] }
zzzfx-core = { path = "../zzzfx-core" }

[lints]
workspace = true
