[package]
name = "zzzfx-openfx-plugin"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[features]
default = ["gpu"]
gpu = ["zzzfx/gpu"]

[dependencies]
zzzfx = { path = "../zzzfx", default-features = false }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "webp", "gif", "ico"] }

[build-dependencies]
bindgen = "0.71"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dev-dependencies]
trybuild = "1.0"
