[package]
name = "zzz-sprite-sheet-openfx-plugin"
version = "0.1.0"
edition = "2024"
license = "MIT OR ISC OR Apache-2.0"

[dependencies]
example-effect = { path = "../example-effect" }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif", "ico"] }

[build-dependencies]
bindgen = "0.71"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
