[package]
name = "zzzfx"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[features]
default = ["gpu"]
gpu = []

[dependencies]
zzzfx-macros = { path = "../macros" }
hifijson = "0.5"
sval = { version = "2.14.1", features = ["std"] }
sval_json = { version = "2.14.1", features = ["std"] }
num_enum = { version = "0.7.5", default-features = false }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
rotsprite = "0.1.4"
font-kit = "0.14.3"
fontdue = "0.9"
oximedia-subtitle = "0.1.7"
rayon = "1.10"
resvg = "0.47.0"
ratex-types = "0.1.11"
wgpu = { version = "29", features = ["wgsl"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif", "ico"] }
midly = { version = "0.5.3", default-features = false, features = ["alloc", "std"] }

[lints]
workspace = true

[dev-dependencies]
trybuild = "1.0"
